--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="bg_cert">
+		<div class="block-first"></div>
 		
 		<img src="img/objective.png" alt="Бесплатная фотосессия" title="Бесплатная фотосессия">
 
@@ -17,7 +18,7 @@
 
 
 
-			
+
 			<h3>* на <span>бесплатную</span>, <span>профессиональную</span> фотосессию !</h3>
 			<h3>* продолжительность: 1 час</h3>
 			<h3>Номер телефона: +38 063 333 33 33</h3>
