--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css">
-	<title>Бесплатная фотосессия</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Бесплатная фотосессия</title>
 </head>
 <body>
 
 
-	<div id="bg_cert">
-		<div class="block-first"></div>
-		
-		<img src="img/objective.png" alt="Бесплатная фотосессия" title="Бесплатная фотосессия">
+<div id="bg_cert">
+    <div class="block-first"></div>
+    <div class="block-second"></div>
 
-			<h1>Сертификат</h1>
+    <img src="img/objective.png" alt="Бесплатная фотосессия" title="Бесплатная фотосессия">
 
-
-
+    <h1>Сертификат</h1>
 
 
-			<h3>* на <span>бесплатную</span>, <span>профессиональную</span> фотосессию !</h3>
-			<h3>* продолжительность: 1 час</h3>
-			<h3>Номер телефона: +38 063 333 33 33</h3>
-			<h3>Фотограф: Орлов Игорь</h3>
-			<h3><p> <a href="http://orlov.com.ua">orlov.com.ua</a></p></h3>
-	</div>
+    <h3>* на <span>бесплатную</span>, <span>профессиональную</span> фотосессию !</h3>
+    <h3>* продолжительность: 1 час</h3>
+    <h3>Номер телефона: +38 063 333 33 33</h3>
+    <h3>Фотограф: Орлов Игорь</h3>
+    <h3><p><a href="http://orlov.com.ua">orlov.com.ua</a></p></h3>
+</div>
 
 
-	<script src="js/JScript.js"></script>
+<script src="js/JScript.js"></script>
 </body>
 </html>
