--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <title>Бесплатная фотосессия</title>
+
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Бесплатная фотосессия</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barrio|Source+Sans+Pro" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barrio|PT+Sans+Narrow|Source+Sans+Pro" rel="stylesheet">
 </head>
 <body>
 
@@ -17,8 +22,8 @@
     <h1>Сертификат</h1>
 
 
-    <h3>* на <span>бесплатную</span>, <span>профессиональную</span> фотосессию !</h3>
-    <h3>* продолжительность: 1 час</h3>
+    <h3>на <b>профессиональную</b> фотосессию !</h3>
+    <h2>продолжительность: 2 час</h2>
     <h3>Номер телефона: +38 063 333 33 33</h3>
     <h3>Фотограф: Орлов Игорь</h3>
     <h3><p><a href="http://orlov.com.ua">orlov.com.ua</a></p></h3>
