changes for styling

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
     <div class="block-first"></div>
     <div class="block-second"></div>
 
-    <img src="img/objective.png" alt="Бесплатная фотосессия" title="Бесплатная фотосессия">
+    <div class="img">
+    <div class="blick-fst"></div>
+    <div class="blick-snd"></div>
+    	<img src="img/objective.png" alt="Бесплатная фотосессия" title="Бесплатная фотосессия">
+    </div>
 
-    <h1>Сертификат</h1>
+    <h1>Certificate</h1>
 
 
-    <h3>на <b>профессиональную</b> фотосессию !</h3>
     <h2>продолжительность: 2 час</h2>
-    <h3>Номер телефона: +38 063 333 33 33</h3>
+    <h3>на <b>профессиональную</b> фотосессию !</h3>
+    <h2>Номер телефона: +38 063 333 33 33</h2>
     <h3>Фотограф: Орлов Игорь</h3>
     <h3><p><a href="http://orlov.com.ua">orlov.com.ua</a></p></h3>
 </div>
