blick and layout

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 
 <div id="bg_cert">
-    <div class="block-first"></div>
-    <div class="block-second"></div>
+    <div class="block-01"></div>
+    <div class="block-02"></div>
+    <div class="block-03"></div>
+    <div class="block-04"></div>
 
     <div class="img">
     <div class="blick-fst"></div>
@@ -26,11 +28,11 @@
     <h1>Certificate</h1>
 
 
-    <h2>продолжительность: 2 час</h2>
-    <h3>на <b>профессиональную</b> фотосессию !</h3>
-    <h2>Номер телефона: +38 063 333 33 33</h2>
-    <h3>Фотограф: Орлов Игорь</h3>
-    <h3><p><a href="http://orlov.com.ua">orlov.com.ua</a></p></h3>
+    <h2>на <b>профессиональную</b> фотосессию</h2>
+    <h3>продолжительность: 2 часа</h3>
+    <h4>№ AF201706</h4>
+    <h5>Действителен до 31.12.2017</h5>
+    <p><a href="http://orlov.com.ua">orlov.com.ua</a></p>
 </div>
 
 
