--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <h4>№ AF201706</h4>
     <h5>Действителен до 31.12.2017</h5>
     <p><a href="http://orlov.com.ua">orlov.com.ua</a></p>
+
+    <div class="info">
+        Свяжитесь с фотографом заблаговременно для согласования места и времени съемки по телефону: 0 (95) 82 555 00
+    </div>
 </div>
 
 
